<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>AutoLab Autonomous Driving Launch Package</description>
  <maintainer email="autolab@todo.todo">autolab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>camera_perception_pkg</exec_depend>
  <exec_depend>lidar_perception_pkg</exec_depend>
  <exec_depend>decision_making_pkg</exec_depend>
  <exec_depend>serial_communication_pkg</exec_depend>
  <exec_depend>debug_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
